--- a/index.html
+++ b/index.html
@@ -7,66 +7,101 @@
     <title>SAM Activities</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu&display=swap"
+        rel="stylesheet">
+
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu&display=swap');
-
-        body {
-            background-color: #FFEEDB;
-            color: #333;
-            font-family: 'Ubuntu', sans-serif;
-        }
-
-        h1 {
-            font-family: 'Montserrat', sans-serif;
-            color: #BA3B46;
+        .activityCard {
+            background-color: #AA8F66;
+            border-radius: 15px;
+            transition: transform 0.2s;
+            cursor: pointer;
+            text-decoration: none;
         }
 
         .activityCard:hover {
             transform: scale(1.05);
         }
+
+        .hoveredImage {
+            max-width: 100%;
+            max-height: 100%;
+            display: none;
+        }
+
+        .show {
+            display: block !important;
+        }
     </style>
 </head>
 
-<body>
+<body style="color: #333; font-family: 'Ubuntu', sans-serif;">
 
-    <div class="container text-center mt-5">
-        <h1>SAM Activities</h1>
-        <p>This page showcases the activities for Systems Administration and Maintenance.</p>
-        
-        <div class="row mt-4">
-            <!-- Activity Cards -->
-            <div class="col-md-4 mb-4">
-                <a href="https://mariari-chickennuggets.github.io/sahara-bootstrap-site/" class="text-decoration-none">
-                    <div class="activityCard text-white p-3" style="background-color: #AA8F66; border-radius: 15px; transition: transform 0.2s;">
-                        <div class="card-body">
-                            <h4 class="card-title">Activity 2</h4>
-                            <p class="card-text">Showcase a place using Bootstrap.</p>
-                        </div>
+    <div class="container-fluid d-flex" style="height: 100vh;">
+        <!-- Left Panel for Activity Cards -->
+        <div class="leftPanel" style="width: 30%; padding: 20px; background-color: #fff;">
+            <h1 style="font-family: 'Montserrat', sans-serif; color: #BA3B46;">SAM Activities</h1>
+            <p>This page showcases the activities for Systems Administration and Maintenance.</p>
+
+            <!-- Link for Activity 2 -->
+            <a href="https://mariari-chickennuggets.github.io/sahara-bootstrap-site/" target="_blank"
+                class="text-white">
+                <div class="activityCard text-white p-3 mb-4" data-img="sahara_act2.png">
+                    <div class="cardBody">
+                        <h4 class="cardTitle">Activity 2</h4>
+                        <p class="cardText">Showcase a place using Bootstrap.</p>
                     </div>
-                </a>
-            </div>
-            <div class="col-md-4 mb-4">
-                <a href="#" class="text-decoration-none">
-                    <div class="activityCard text-white p-3" style="background-color: #AA8F66; border-radius: 15px; transition: transform 0.2s;">
-                        <div class="card-body">
-                            <h4 class="card-title">Activity 3</h4>
-                            <p class="card-text">Create a homepage for activities.</p>
-                        </div>
+                </div>
+            </a>
+
+            <!-- Placeholder links for Activity 3 and 4 -->
+            <a href="#" class="text-white">
+                <div class="activityCard text-white p-3 mb-4"
+                    data-img="https://media.giphy.com/media/lJNoBCvQYp7nq/giphy.gif">
+                    <div class="cardBody">
+                        <h4 class="cardTitle">Activity 3</h4>
+                        <p class="cardText">Create a homepage for activities. It's this page.</p>
                     </div>
-                </a>
-            </div>
-            <div class="col-md-4 mb-4">
-                <a href="#" class="text-decoration-none">
-                    <div class="activityCard text-white p-3" style="background-color: #AA8F66; border-radius: 15px; transition: transform 0.2s;">
-                        <div class="card-body">
-                            <h4 class="card-title">Activity 4</h4>
-                            <p class="card-text">TBA</p>
-                        </div>
+                </div>
+            </a>
+
+            <a href="#" class="text-white">
+                <div class="activityCard text-white p-3 mb-4"
+                    data-img="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif">
+                    <div class="cardBody">
+                        <h4 class="cardTitle">Activity 4</h4>
+                        <p class="cardText">TBA</p>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
+        </div>
+
+        <!-- Right Panel for Hovered Image -->
+        <div class="rightPanel d-flex align-items-center justify-content-center"
+            style="width: 70%; background-color: #fff; padding: 20px;">
+            <img id="hoveredImage" class="hoveredImage" src="" alt="Activity Image">
         </div>
     </div>
+
+    <script>
+        // Select all activity cards and the image element
+        const activityCards = document.querySelectorAll('.activityCard');
+        const hoveredImage = document.getElementById('hoveredImage');
+
+        // Add hover event listeners to each activity card
+        activityCards.forEach(card => {
+            card.addEventListener('mouseenter', function () {
+                // Get the image source from the data-img attribute
+                const imgSrc = card.getAttribute('data-img');
+                hoveredImage.src = imgSrc;
+                hoveredImage.classList.add('show');
+            });
+
+            card.addEventListener('mouseleave', function () {
+                hoveredImage.classList.remove('show');
+            });
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
