--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <a href="https://mariari-chickennuggets.github.io/sahara-bootstrap-site/" target="_blank"
                 class="text-white">
-                <div class="activityCard text-white p-3 mb-4" data-img="sahara_act2.png">
+                <div class="activityCard text-white p-3 mb-4" data-img="sahara_act2.PNG">
                     <div class="cardBody">
                         <h4 class="cardTitle">Activity 2</h4>
                         <p class="cardText">Showcase a place using Bootstrap.</p>
