--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
             <h1 style="font-family: 'Montserrat', sans-serif; color: #BA3B46;">SAM Activities</h1>
             <p>This page showcases the activities for Systems Administration and Maintenance.</p>
 
-            <a href="https://mariari-chickennuggets.github.io/sahara-bootstrap-site/" target="_blank"
-                class="text-white">
-                <div class="activityCard text-white p-3 mb-4" data-img="sahara_act2.PNG">
+            <a href="activity-2/index.html" target="_blank" class="text-white">
+                <div class="activityCard text-white p-3 mb-4" data-img="activity-2/sahara_act2.png">
                     <div class="cardBody">
                         <h4 class="cardTitle">Activity 2</h4>
                         <p class="cardText">Showcase a place using Bootstrap.</p>
