--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 style="font-family: 'Montserrat', sans-serif; color: #BA3B46;">SAM Activities</h1>
             <p>This page showcases the activities for Systems Administration and Maintenance.</p>
 
-            <a href="activity-2/index.html" target="_blank" class="text-white">
+            <a href="act2/index.html" target="_blank" class="text-white">
                 <div class="activityCard text-white p-3 mb-4" data-img="activity-2/sahara_act2.png">
                     <div class="cardBody">
                         <h4 class="cardTitle">Activity 2</h4>
