--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>This page showcases the activities for Systems Administration and Maintenance.</p>
 
             <a href="act2/index.html" target="_blank" class="text-white">
-                <div class="activityCard text-white p-3 mb-4" data-img="activity-2/sahara_act2.png">
+                <div class="activityCard text-white p-3 mb-4" data-img="sahara_act2.png">
                     <div class="cardBody">
                         <h4 class="cardTitle">Activity 2</h4>
                         <p class="cardText">Showcase a place using Bootstrap.</p>
