--- a/act4/view.html
+++ b/act4/view.html
@@ -22,25 +22,23 @@
 <body>
     <div class="container mt-5 text-center">
         <div class="mt-4">
-            <h3 id="meme-title"></h3> <!-- Placeholder for meme title -->
+            <h3 id="meme-title"></h3>
             <img id="full-meme" src="" alt="Full Meme" class="img-fluid mt-3">
         </div>
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // Get URL parameters
             const urlParams = new URLSearchParams(window.location.search);
             const memeUrl = urlParams.get('meme');
-            const memeTitle = urlParams.get('title');  // Get meme title
+            const memeTitle = urlParams.get('title'); 
 
-            // Display the meme title and image if they exist
             if (memeUrl && memeTitle) {
                 const imgElement = document.getElementById('full-meme');
                 const titleElement = document.getElementById('meme-title');
 
-                imgElement.src = memeUrl;  // Set the full-size meme image
-                titleElement.textContent = memeTitle;  // Set the meme title
+                imgElement.src = memeUrl; 
+                titleElement.textContent = memeTitle; 
             } else {
                 document.body.innerHTML = '<p class="text-center">No meme found.</p>';
             }
