--- a/index.html
+++ b/index.html
@@ -1,100 +1,158 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAM Activities</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Ubuntu&display=swap"
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Landing Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&family=Nunito:wght@300;400;600;700&display=swap"
         rel="stylesheet">
 
     <style>
-        .activityCard {
-            background-color: #AA8F66;
-            border-radius: 15px;
-            transition: transform 0.2s;
-            cursor: pointer;
+        body {
+            background-color: #F3F3E0;
+            font-family: 'Nunito', sans-serif;
+        }
+
+        .navbar {
+            background-color: #133E87;
+        }
+
+        .navbar-brand,
+        .nav-link {
+            color: #F3F3E0 !important;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: #CBDCEB !important;
+        }
+
+        .profileHeader {
+            background-color: #133E87;
+            padding: 50px 0;
+            color: #F3F3E0;
+        }
+
+        .profileHeader img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+        }
+
+        .profileCard {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 30px;
+            background-color: #fff;
+            border: 2px solid #CBDCEB;
+            margin-bottom: 20px;
+        }
+
+        .profileCard h4 {
+            color: #133E87;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        .profileHeader h2,
+        .profileHeader p {
+            color: #F3F3E0;
+        }
+
+        .btnPrimary {
+            background-color: #608BC1;
+            border: none;
+        }
+
+        .btnPrimary:hover {
+            background-color: #133E87;
+        }
+
+        .activityBtn {
+            background-color: #608BC1;
+            border-radius: 10px;
+            border: 1px;
+            padding: 20px;
+            color: white;
+            font-size: 1.2rem;
+            text-align: center;
+            display: block;
+            margin-bottom: 20px;
             text-decoration: none;
+            transition: background-color 0.3s;
+            font-family: 'Montserrat', sans-serif;
         }
 
-        .activityCard:hover {
-            transform: scale(1.05);
-        }
-
-        .hoveredImage {
-            max-width: 100%;
-            max-height: 100%;
-            display: none;
-        }
-
-        .show {
-            display: block !important;
+        .activityBtn:hover {
+            background-color: #133E87;
         }
     </style>
 </head>
 
-<body style="color: #333; font-family: 'Ubuntu', sans-serif;">
-
-    <div class="container-fluid d-flex" style="height: 100vh;">
-        <div class="leftPanel" style="width: 30%; padding: 20px; background-color: #fff;">
-            <h1 style="font-family: 'Montserrat', sans-serif; color: #BA3B46;">SAM Activities</h1>
-            <p>This page showcases the activities for Systems Administration and Maintenance.</p>
-
-            <a href="act2/index.html" target="_blank" class="text-white">
-                <div class="activityCard text-white p-3 mb-4" data-img="sahara_act2.PNG">
-                    <div class="cardBody">
-                        <h4 class="cardTitle">Activity 2</h4>
-                        <p class="cardText">Showcase a place using Bootstrap.</p>
-                    </div>
-                </div>
-            </a>
-
-            <a href="https://mariari-chickennuggets.github.io/SAM-activities/" class="text-white">
-                <div class="activityCard text-white p-3 mb-4"
-                    data-img="https://media.giphy.com/media/lJNoBCvQYp7nq/giphy.gif">
-                    <div class="cardBody">
-                        <h4 class="cardTitle">Activity 3</h4>
-                        <p class="cardText">Create a homepage for activities. It's this page.</p>
-                    </div>
-                </div>
-            </a>
-
-            <a href="#" class="text-white">
-                <div class="activityCard text-white p-3 mb-4"
-                    data-img="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif">
-                    <div class="cardBody">
-                        <h4 class="cardTitle">Activity 4</h4>
-                        <p class="cardText">TBA</p>
-                    </div>
-                </div>
-            </a>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">SAM Activities</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile.html">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="https://mariari-chickennuggets.github.io/SAM-activities/">Activities</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="feedbacks.html">Feedbacks</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
 
-        <div class="rightPanel d-flex align-items-center justify-content-center"
-            style="width: 70%; background-color: #fff; padding: 20px;">
-            <img id="hoveredImage" class="hoveredImage" src="" alt="Activity Image">
+    <header class="profileHeader text-center">
+        <div class="container">
+            <img src="bear.jpg" alt="Profile Picture" class="rounded-circle img-fluid" style="max-width: 150px;">
+            <h2 class="mt-3">Maria Jessica Laurel</h2>
+            <p>IT student | Designer | Memer</p>
+            <div class="d-flex justify-content-center mt-3">
+            </div>
+        </div>
+    </header>
+
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="act2/index.html" target="_blank" class="activityBtn">
+                    Activity 2
+                </a>
+            </div>
+
+            <div class="col-md-4">
+                <a href="https://mariari-chickennuggets.github.io/SAM-activities/" target="_blank" class="activityBtn">
+                    Activity 3
+                </a>
+            </div>
+
+            <div class="col-md-4">
+                <a href="act4/index.html" target="_blank" class="activityBtn">
+                    Activity 4
+                </a>
+            </div>
         </div>
     </div>
 
-    <script>
-        const activityCards = document.querySelectorAll('.activityCard');
-        const hoveredImage = document.getElementById('hoveredImage');
-        activityCards.forEach(card => {
-            card.addEventListener('mouseenter', function () {
-                const imgSrc = card.getAttribute('data-img');
-                hoveredImage.src = imgSrc;
-                hoveredImage.classList.add('show');
-            });
-
-            card.addEventListener('mouseleave', function () {
-                hoveredImage.classList.remove('show');
-            });
-        });
-    </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
