--- a/act4/index.html
+++ b/act4/index.html
@@ -143,7 +143,7 @@
                 <span class="keyword" style="color:#972344" data-keyword="dog">Dog</span>
                 <span class="keyword" style="color:#b4284b" data-keyword="meme">Meme</span>
             </div>
-            <button class="allMemesBtn" id="allMemesBtn" onclick="window.location.href='allMemes.html';">View All
+            <button class="allMemesBtn" id="allMemesBtn" onclick="window.location.href='allmemes.html';">View All
                 Memes</button>
         </div>
         <div class="row mt-4" id="memeGallery"></div>
