--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Landing Page</title>
+    <link rel="icon" href="nugget-removebg-preview.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&family=Nunito:wght@300;400;600;700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
+
 
     <style>
         body {
             background-color: #F3F3E0;
             font-family: 'Nunito', sans-serif;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         .navbar {
@@ -32,6 +38,17 @@
             color: #CBDCEB !important;
         }
 
+        .navbar-brand-custom {
+            font-family: "Sour Gummy", serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
+            font-variation-settings: "wdth" 100;
+            font-size: 1.5rem;
+            color: #F3F3E0;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+        }
+
         .profileHeader {
             background-color: #133E87;
             padding: 50px 0;
@@ -45,6 +62,14 @@
             object-fit: cover;
         }
 
+        .sectionTitle {
+            font-family: 'Montserrat', sans-serif;
+            color: #133E87;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         .profileCard {
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
@@ -54,14 +79,11 @@
             margin-bottom: 20px;
         }
 
+
+
         .profileCard h4 {
             color: #133E87;
             font-family: 'Montserrat', sans-serif;
-        }
-
-        .profileHeader h2,
-        .profileHeader p {
-            color: #F3F3E0;
         }
 
         .btnPrimary {
@@ -91,13 +113,39 @@
         .activityBtn:hover {
             background-color: #133E87;
         }
+
+        .footer {
+            background-color: #133E87;
+            color: #F3F3E0;
+            padding: 20px 0;
+            text-align: center;
+            width: 100%;
+            margin-top: auto;
+        }
+
+        .footer a {
+            color: #CBDCEB;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            color: #F3F3E0;
+        }
+
+        .funFactEmoji {
+            font-size: 1.5rem;
+        }
     </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">SAM Activities</a>
+            <a class="navbar-brand navbar-brand-custom" href="#">
+                <img src="nugget-removebg-preview.png" alt="Logo"
+                    style="width: 45px; height: 45px; margin-right: 10px;">
+                MariaRi ChickenNuggets
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -108,7 +156,8 @@
                         <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://mariari-chickennuggets.github.io/SAM-activities/">Activities</a>
+                        <a class="nav-link active"
+                            href="https://mariari-chickennuggets.github.io/SAM-activities/">Activities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="feedbacks.html">Feedbacks</a>
@@ -120,39 +169,181 @@
 
     <header class="profileHeader text-center">
         <div class="container">
-            <img src="bear.jpg" alt="Profile Picture" class="rounded-circle img-fluid" style="max-width: 150px;">
+            <img src="jak3.png" alt="Profile Picture" class="rounded-circle img-fluid" style="max-width: 150px;">
             <h2 class="mt-3">Maria Jessica Laurel</h2>
-            <p>IT student | Designer | Memer</p>
-            <div class="d-flex justify-content-center mt-3">
-            </div>
+            <p>IT student | Designer(?) | Memer</p>
         </div>
     </header>
 
     <div class="container my-5">
-        <div class="row">
-            <div class="col-md-4">
-                <a href="act2/index.html" target="_blank" class="activityBtn">
-                    Activity 2
-                </a>
-            </div>
-
-            <div class="col-md-4">
-                <a href="https://mariari-chickennuggets.github.io/SAM-activities/" target="_blank" class="activityBtn">
-                    Activity 3
-                </a>
-            </div>
-
-            <div class="col-md-4">
-                <a href="act4/index.html" target="_blank" class="activityBtn">
-                    Activity 4
-                </a>
+        <div class="profileCard">
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <h4 class="sectionTitle">About Me</h4>
+                    <p>Hi! I'm Maria, an IT student passionate about web design, memes, and creative problem-solving. I
+                        love
+                        creating engaging web experiences and exploring new design trends. When I'm not coding, you can
+                        find me
+                        laughing at memes or experimenting with graphic design.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="gunther.png" alt="Maria's Picture" class="img-fluid rounded"
+                        style="max-width: 100%; height: auto;">
+                </div>
             </div>
         </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+
+        <div class="profileCard">
+            <h4 class="sectionTitle">Fun Facts About Me</h4>
+            <ul>
+                <li><span class="funFactEmoji">🍗</span> I believe chicken nuggets are the ultimate comfort food.</li>
+                <li><span class="funFactEmoji">🎨</span> Sometimes, I try to paint, but it usually ends up as abstract
+                    art.</li>
+                <li><span class="funFactEmoji">😄</span> My meme collection is rivaled only by my coding errors.</li>
+            </ul>
+        </div>
+
+        <div class="profileCard">
+            <h4 class="sectionTitle">Skills</h4>
+            <div class="row text-center">
+                <div class="col-4">
+                    <i class="bi bi-code-slash" style="font-size: 2rem; color: #133E87;"></i>
+                    <p>Web Development</p>
+                </div>
+                <div class="col-4">
+                    <i class="bi bi-palette-fill" style="font-size: 2rem; color: #133E87;"></i>
+                    <p>Graphic Design</p>
+                </div>
+                <div class="col-4">
+                    <i class="bi bi-laptop" style="font-size: 2rem; color: #133E87;"></i>
+                    <p>IT Support</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container my-5">
+            <h3 class="sectionTitle">Activities</h3>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card text-center">
+                        <img src="5.png" class="card-img-top" alt="Activity 2 Image">
+                        <div class="card-body">
+                            <h5 class="activity1">Activity 1</h5>
+                            <p class="card-text">Explore the wonders of the Sahara Desert through this activity.</p>
+                            <a href="act2/index.html" target="_blank" class="btn btn-outline-primary">View Activity</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card text-center">
+                            <img src="sahara.PNG" class="card-img-top" alt="Activity 2 Image">
+                            <div class="card-body">
+                                <h5 class="activity2">Activity 2</h5>
+                                <p class="card-text">Explore the wonders of the Sahara Desert through this activity.</p>
+                                <a href="act2/index.html" target="_blank" class="btn btn-outline-primary">View
+                                    Activity</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card text-center">
+                            <img src="activity3.jpg" class="card-img-top" alt="Activity 3 Image">
+                            <div class="card-body">
+                                <h5 class="activity3">Activity 3</h5>
+                                <p class="card-text">Dive into the depths of oceanic exploration with this activity.</p>
+                                <a href="https://mariari-chickennuggets.github.io/SAM-activities/" target="_blank"
+                                    class="btn btn-outline-primary">View Activity</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card text-center">
+                            <img src="mememo.PNG" class="card-img-top" alt="Activity 4 Image">
+                            <div class="card-body">
+                                <h5 class="activity4">Activity 4</h5>
+                                <p class="card-text">Discover the fascinating history of ancient civilizations in this
+                                    activity.</p>
+                                <a href="act4/index.html" target="_blank" class="btn btn-outline-primary">View
+                                    Activity</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container my-5">
+                <h3 class="text-center mb-4">Watch some videos while you're here</h3>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">Kurzgesagt Videos</h5>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe
+                                        src="https://www.youtube.com/embed?listType=playlist&list=PLFs4vir_WsTyXrrpFstD64Qj95vpy-yo1"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">Philomena Cunk</h5>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe
+                                        src="https://www.youtube.com/embed?listType=playlist&list=PLJgEkkxdQBWcJKOzhf6EThi5pn-vIS7aY"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">Animatics</h5>
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe src="https://www.youtube.com/embed?listType=playlist&list=RDF64yFFnZfkI"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen>
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <footer class="footer"
+                style="background-color: #133E87; color: #F3F3E0; padding: 20px 0; text-align: center; width: 100%; margin: 0; position: relative; left: 0; bottom: 0;">
+                <div class="container" style="margin: 0; padding: 0;">
+                    <p>Made with ❤️ by Maria Jessica Laurel</p>
+                    <p>
+                        <a href="mailto:mariajessica@example.com" style="color: #CBDCEB; text-decoration: none;"><i
+                                class="bi bi-envelope"></i> Email</a> |
+                        <a href="https://github.com/mariari-chickennuggets" target="_blank"
+                            style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-github"></i> GitHub</a> |
+                        <a href="https://www.linkedin.com/in/mariajessica" target="_blank"
+                            style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-linkedin"></i> LinkedIn</a>
+                    </p>
+                </div>
+            </footer>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s">
+                </script>
+
 </body>
 
 </html>
