--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
             </div>
         </div>
 
-
         <div class="profileCard">
             <h4 class="sectionTitle">Fun Facts About Me</h4>
             <ul>
@@ -222,127 +221,103 @@
             </div>
         </div>
 
-
-        <div class="container my-5">
-            <h3 class="sectionTitle">Activities</h3>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card text-center">
-                        <img src="5.png" class="card-img-top" alt="Activity 2 Image">
-                        <div class="card-body">
-                            <h5 class="activity1">Activity 1</h5>
-                            <p class="card-text">Explore the wonders of the Sahara Desert through this activity.</p>
-                            <a href="act2/index.html" target="_blank" class="btn btn-outline-primary">View Activity</a>
-                        </div>
-                    </div>
+        <div class="profileCard">
+            <h4 class="sectionTitle">Activities</h4>
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="act1/index.html" target="_blank" class="activityBtn">
+                        Activity 1
+                    </a>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card text-center">
-                            <img src="sahara.PNG" class="card-img-top" alt="Activity 2 Image">
-                            <div class="card-body">
-                                <h5 class="activity2">Activity 2</h5>
-                                <p class="card-text">Explore the wonders of the Sahara Desert through this activity.</p>
-                                <a href="act2/index.html" target="_blank" class="btn btn-outline-primary">View
-                                    Activity</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card text-center">
-                            <img src="activity3.jpg" class="card-img-top" alt="Activity 3 Image">
-                            <div class="card-body">
-                                <h5 class="activity3">Activity 3</h5>
-                                <p class="card-text">Dive into the depths of oceanic exploration with this activity.</p>
-                                <a href="https://mariari-chickennuggets.github.io/SAM-activities/" target="_blank"
-                                    class="btn btn-outline-primary">View Activity</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card text-center">
-                            <img src="mememo.PNG" class="card-img-top" alt="Activity 4 Image">
-                            <div class="card-body">
-                                <h5 class="activity4">Activity 4</h5>
-                                <p class="card-text">Discover the fascinating history of ancient civilizations in this
-                                    activity.</p>
-                                <a href="act4/index.html" target="_blank" class="btn btn-outline-primary">View
-                                    Activity</a>
-                            </div>
+                <div class="col-md-4">
+                    <a href="act2/index.html" target="_blank" class="activityBtn">
+                        Activity 2
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="index.html" target="_blank"
+                        class="activityBtn">
+                        Activity 3
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="act4/index.html" target="_blank" class="activityBtn">
+                        Activity 4
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="container my-5">
+        <h3 class="text-center mb-4">Watch some videos while you're here</h3>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Kurzgesagt Videos</h5>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe
+                                src="https://www.youtube.com/embed?listType=playlist&list=PLFs4vir_WsTyXrrpFstD64Qj95vpy-yo1"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                            </iframe>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-            <div class="container my-5">
-                <h3 class="text-center mb-4">Watch some videos while you're here</h3>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">Kurzgesagt Videos</h5>
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe
-                                        src="https://www.youtube.com/embed?listType=playlist&list=PLFs4vir_WsTyXrrpFstD64Qj95vpy-yo1"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                    </iframe>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">Philomena Cunk</h5>
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe
-                                        src="https://www.youtube.com/embed?listType=playlist&list=PLJgEkkxdQBWcJKOzhf6EThi5pn-vIS7aY"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                    </iframe>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">Animatics</h5>
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe src="https://www.youtube.com/embed?listType=playlist&list=RDF64yFFnZfkI"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                    </iframe>
-                                </div>
-                            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Philomena Cunk</h5>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe
+                                src="https://www.youtube.com/embed?listType=playlist&list=PLJgEkkxdQBWcJKOzhf6EThi5pn-vIS7aY"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                            </iframe>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <footer class="footer"
-                style="background-color: #133E87; color: #F3F3E0; padding: 20px 0; text-align: center; width: 100%; margin: 0; position: relative; left: 0; bottom: 0;">
-                <div class="container" style="margin: 0; padding: 0;">
-                    <p>Made with ❤️ by Maria Jessica Laurel</p>
-                    <p>
-                        <a href="mailto:mariajessica@example.com" style="color: #CBDCEB; text-decoration: none;"><i
-                                class="bi bi-envelope"></i> Email</a> |
-                        <a href="https://github.com/mariari-chickennuggets" target="_blank"
-                            style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-github"></i> GitHub</a> |
-                        <a href="https://www.linkedin.com/in/mariajessica" target="_blank"
-                            style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-linkedin"></i> LinkedIn</a>
-                    </p>
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Animatics</h5>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe src="https://www.youtube.com/embed?listType=playlist&list=RDF64yFFnZfkI"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>
                 </div>
-            </footer>
+            </div>
+        </div>
+    </div>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s">
-                </script>
+
+    <footer class="footer"
+        style="background-color: #133E87; color: #F3F3E0; padding: 20px 0; text-align: center; width: 100%; margin: 0; position: relative; left: 0; bottom: 0;">
+        <div class="container" style="margin: 0; padding: 0;">
+            <p>Made with ❤️ by Maria Jessica Laurel</p>
+            <p>
+                <a href="mailto:mariajessica@example.com" style="color: #CBDCEB; text-decoration: none;"><i
+                        class="bi bi-envelope"></i> Email</a> |
+                <a href="https://github.com/mariari-chickennuggets" target="_blank"
+                    style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-github"></i> GitHub</a> |
+                <a href="https://www.linkedin.com/in/mariajessica" target="_blank"
+                    style="color: #CBDCEB; text-decoration: none;"><i class="bi bi-linkedin"></i> LinkedIn</a>
+            </p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s">
+        </script>
 
 </body>
 
