--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Landing Page</title>
-    <link rel="icon" href="nugget-removebg-preview.png" type="image/x-icon">
+    <link rel="icon" href="iconnugget.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -142,7 +142,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand navbar-brand-custom" href="#">
-                <img src="nugget-removebg-preview.png" alt="Logo"
+                <img src="iconnugget.png" alt="Logo"
                     style="width: 45px; height: 45px; margin-right: 10px;">
                 MariaRi ChickenNuggets
             </a>
