Add index.html to act1 folder

--- a/index.html
+++ b/index.html
@@ -153,14 +153,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="profile.html">Profile</a>
+                        <a class="nav-link" href="index.html">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active"
-                            href="https://mariari-chickennuggets.github.io/SAM-activities/">Activities</a>
+                        <a class="nav-link" href="index.html"> Activities</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="feedbacks.html">Feedbacks</a>
+                        <a class="nav-link" href="index.html">Feedbacks</a>
                     </li>
                 </ul>
             </div>
