--- a/act1/index.html
+++ b/act1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brochure</title>
-    <link rel="icon" href="iconnugget.png" type="image/x-icon">
+    <link rel="icon" href="iconnugget.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .fullWidthImage {
