--- a/index.html
+++ b/index.html
@@ -230,26 +230,26 @@
         </div>
 
         <div class="profileCard">
-            <h4 class="sectionTitle">Activities</h4>
+            <h4 class="sectionTitle">Projects</h4>
             <div class="row">
                 <div class="col-md-4">
                     <a href="act1/index.html" target="_blank" class="activityBtn">
-                        Activity 1
+                        Brochure
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="act2/index.html" target="_blank" class="activityBtn">
-                        Activity 2
+                        Sahara Desert
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="index.html" target="_blank" class="activityBtn">
-                        Activity 3
+                        Profile page
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="act4/index.html" target="_blank" class="activityBtn">
-                        Activity 4
+                        MemeMo
                     </a>
                 </div>
             </div>
