--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </head>
 
   <body>
-    <button id="spotify-toggle">Come chill</button>
+    <button id="spotify-toggle">Listen in</button>
 
     <div id="spotify-card" class="hidden">
       <iframe
