--- a/index.html
+++ b/index.html
@@ -352,6 +352,11 @@
               MemeMo
             </a>
           </div>
+          <div class="col-md-4">
+            <a href="Kurzgesagt/index.html" target="_blank" class="activityBtn">
+              Kurzgesagt
+            </a>
+          </div>
         </div>
       </div>
     </div>
