--- a/404.html
+++ b/404.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>404 - Jake the Dog</title>
+    <title>404</title>
+    <link rel="icon" href="iconnugget.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
       rel="stylesheet"
