--- a/index.html
+++ b/index.html
@@ -353,10 +353,13 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="Kurzgesagt/index.html" target="_blank" class="activityBtn">
-              Kurzgesagt
+            <a href="mp1/index.html" target="_blank" class="activityBtn">
+              New Activity
             </a>
           </div>
+        </div>
+      </div>
+  
         </div>
       </div>
     </div>
