--- a/index.html
+++ b/index.html
@@ -353,13 +353,10 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="mp1/index.html" target="_blank" class="activityBtn">
+            <a href="video.html" target="_blank" class="activityBtn">
               New Activity
             </a>
           </div>
-        </div>
-      </div>
-  
         </div>
       </div>
     </div>
