--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="video.html" target="_blank" class="activityBtn">
+            <a href="mp1/index.html" target="_blank" class="activityBtn">
               New Activity
             </a>
           </div>
