--- a/mp1/index.html
+++ b/mp1/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -66,5 +66,19 @@
       </div>
     </nav>
 
+    <header class="text-center p-5">
+      <h1 class="display-4 animate__animated animate__fadeInDown">
+        Kurzgesagt – In a Nutshell
+      </h1>
+      <p class="lead animate__animated animate__fadeInUp">
+        Animation videos explaining things with optimistic nihilism since
+        12,013.
+      </p>
+      <a
+        href="#videos"
+        class="btn btn-warning btn-lg animate__animated animate__pulse animate__infinite"
+        >Explore Videos</a
+      >
+    </header>
   </body>
 </html>
