Update index.html in mp1 folder

--- a/mp1/index.html
+++ b/mp1/index.html
@@ -80,5 +80,25 @@
         >Explore Videos</a
       >
     </header>
+
+    <section id="videos" class="container my-5">
+      <h2 class="text-center mb-4 animate__animated animate__slideInUp"> Kurzgesagt Channel Trailer </h2>
+      <div class="row">
+        <div class="col-md-4 animate-on-scroll">
+          <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/_27eD49ePQE?si=oAaPu77ZOArzCinx"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+    </section>
+
+
   </body>
 </html>
